# omplayer

./: .gitignore  CMakeLists.txt  README.md  gitdeps.json
audiokit/: CMakeLists.txt
audiokit/audiokit/: AudioData.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioMixer.hpp  Macro.hpp  MultiChannelResampler.cpp  MultiChannelResampler.hpp  SincResampler.cpp  SincResampler.hpp
src/: audio_sink.hpp  av_clock.hpp  frame_queue.hpp  main.cpp  media_player.hpp  ring_buffer.hpp  ui.hpp  video_renderer.hpp
